--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-s3-uploader",
-  "version": "4.8.0",
+  "version": "5.0.0",
   "description": "React component that renders a file input and automatically uploads to an S3 bucket",
   "main": "index.js",
   "scripts": {
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@github.com:odysseyscience/react-s3-uploader.git"
+    "url": "git@github.com:Edheltur/react-s3-uploader.git"
   },
   "keywords": [
     "react",
@@ -17,14 +17,13 @@
     "s3",
     "bucket"
   ],
-  "author": "Sean Adkinson",
+  "author": "Sean Adkinson, Arkady Anderjushkin",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/odysseyscience/react-s3-uploader/issues"
+    "url": "https://github.com/Edheltur/react-s3-uploader/issues"
   },
-  "homepage": "https://github.com/odysseyscience/react-s3-uploader",
+  "homepage": "https://github.com/Edheltur/react-s3-uploader",
   "dependencies": {
-    "aws-sdk": "2.x",
     "create-react-class": "^15.5.2",
     "object-assign": "^2.0.0",
     "prop-types": "^15.5.8",
